fixing references for proofs

--- a/reconstruction.rmd
+++ b/reconstruction.rmd
@@ -151,7 +151,7 @@ Even as `apriori`  expresses associations between things as relative probabiliti
     ggsave('figure/tesco_grocery_lines.png')
 ```
 
-Items in the `Groceries` dataset proliferate into a Tesco's list of branded products. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure 3).  Recommender systems confront, I would suggest, a logistical proliferation of commodities. The association rules derived  from  the `Grocery` dataset becomes more open to identifying sets of items that have only low association with each other.  Given almost 2500 `sauces` and 1200 `rice` products listed by the Tesco API,  a tremendous number of associations between sauce and rice are possible. The propensities of any given sauce and rice product to find themselves together in a shopping basket greatly. The proliferation of things on the shelves of supermarket or grocery warehouse produces a combinatorial problem for data-mining machine learning approaches such as association rules. `r total` products (actually Patel mentioned 200,000 products) can be combined in a many ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Most possible shopping lists have propensities or tendencies to realization expressed as probabilities close to zero. Others with somewhat higher propensities might furnish the basis of interesting recommendations.
+Items in the `Groceries` dataset proliferate into a Tesco's list of branded products. The 169 items of the `Groceries` dataset  expand into roughly `r total` Tesco items (see Figure 3).  Recommender systems confront, I would suggest, a logistical proliferation of commodities. The association rules derived  from  the `Grocery` dataset becomes more open to identifying sets of items that have only low association with each other.  Given almost 2500 `sauces` and 1200 `rice` products listed by the Tesco API,  a tremendous number of associations between sauce and rice are possible. The propensities of any given sauce and rice product to find themselves together in a shopping basket vary greatly. The proliferation of things on the shelves of supermarket or grocery warehouse produces a combinatorial problem for data-mining machine learning approaches such as association rules. `r total` products (actually Patel mentioned 200,000 products) can be combined in a many ways. If a typical shopping list has 20 items, then there are `r format(choose(total, 20), 2)` possible lists. Most possible shopping lists have propensities or tendencies to realization expressed as probabilities close to zero. Others with somewhat higher propensities might furnish the basis of interesting recommendations.
 
 More importantly, the combinatorial proliferation of association rules suggest why personalization or a 'personal relevance' model might become relevant.    Even if the association rules provide recommendable sets of frequency-weighted associations, an `apriori`-based recommender system has no way of narrowing its recommendations. Its probabilisation of shopping is incomplete since it only works on associations between things. The tendency of  milk to find itself in a shopping basket alongside bread attests to an ordinary propensity in certain parts of the world. The conditional probabilities implicit in the association rules  do not, however, include much of the world.  These associations are not trivial, but they are very open-ended. Put in terms of Popper's account of probability as propensity, the rules-based system has, in principle, limited means of crystallizing a limited or enclosed set of possibilities.[^135.1]
 
