--- a/log.rmd
+++ b/log.rmd
@@ -879,4 +879,9 @@ An overview of changes and discussion of suggestions I wasn't able to implement:
 - had to do the bibliography using 12 Feb 2018 ref_bibs commit; I've tried to tag it as bdas-references
 
 
-
+## Wed 16 May 2018 19:09:07 BST
+- doing proofs  BDS778310.pdf 
+- TODO:  
+    - look up Sarwar conference location
+    - Ardissono editors, etc.Goy, Anna, Liliana Ardissono, and Giovanna Petrone. ‘Personalization in E-Commerce Applications’. In The Adaptive Web, edited by P. Brusilovsky, A. Kobsa, and W Nejdl, 485–520. Springer, 2007.
+ 
